k8s/homelab/core/monitoring/manifests/prometheusAdapter/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    argocd.argoproj.io/sync-options: ""
    argocd.argoproj.io/sync-wave: "5"
  labels:
    app.kubernetes.io/component: metrics-adapter
    app.kubernetes.io/name: prometheus-adapter
    app.kubernetes.io/part-of: kube-prometheus
    app.kubernetes.io/version: 0.12.0
  name: prometheus-adapter
  namespace: monitoring
spec:
  ports:
    - name: https
      port: 443
      targetPort: 6443
  selector:
    app.kubernetes.io/component: metrics-adapter
    app.kubernetes.io/name: prometheus-adapter
    app.kubernetes.io/part-of: kube-prometheus
